{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 76,
  "lineage": "29f3aa4c-b6b4-3410-c405-7a605e25af24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541df836deacc344",
            "arn": "arn:aws:ec2:us-east-1:082897116988:elastic-ip/eipalloc-0541df836deacc344",
            "domain": "vpc",
            "id": "eipalloc-0541df836deacc344",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-94-160-12.compute-1.amazonaws.com",
            "public_ip": "98.94.160.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-eip-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-eip-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d3bf929b37b7c2",
            "arn": "arn:aws:ec2:us-east-1:082897116988:elastic-ip/eipalloc-094d3bf929b37b7c2",
            "domain": "vpc",
            "id": "eipalloc-094d3bf929b37b7c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-205-175-0.compute-1.amazonaws.com",
            "public_ip": "44.205.175.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-eip-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-eip-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:internet-gateway/igw-0039c610a7770b861",
            "id": "igw-0039c610a7770b861",
            "owner_id": "082897116988",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-igw",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-igw",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541df836deacc344",
            "association_id": "eipassoc-08ccf6676a2f3a957",
            "connectivity_type": "public",
            "id": "nat-01659a5384a8a187e",
            "network_interface_id": "eni-0a876046f8978f0a8",
            "private_ip": "10.0.1.92",
            "public_ip": "98.94.160.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f7be5508dc3cffd",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d3bf929b37b7c2",
            "association_id": "eipassoc-0bc6669d3c1277c47",
            "connectivity_type": "public",
            "id": "nat-004339c8dc2606731",
            "network_interface_id": "eni-0bcf45c85b97a6712",
            "private_ip": "10.0.2.59",
            "public_ip": "44.205.175.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d368ec5bbabc924a",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-nat-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:route-table/rtb-0f9458c43f50c5a71",
            "id": "rtb-0f9458c43f50c5a71",
            "owner_id": "082897116988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01659a5384a8a187e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-rt-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-rt-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "timeouts": null,
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:route-table/rtb-04da4e69e5a24a958",
            "id": "rtb-04da4e69e5a24a958",
            "owner_id": "082897116988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004339c8dc2606731",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-rt-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-rt-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "timeouts": null,
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:route-table/rtb-0bfc56400fc4fdd3d",
            "id": "rtb-0bfc56400fc4fdd3d",
            "owner_id": "082897116988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0039c610a7770b861",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-rt",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-rt",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "timeouts": null,
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c1e73dd10b8ba6c",
            "route_table_id": "rtb-0f9458c43f50c5a71",
            "subnet_id": "subnet-09f579353fcf047b4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019da266ac059e651",
            "route_table_id": "rtb-04da4e69e5a24a958",
            "subnet_id": "subnet-0bb0e7f6ae9506664"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028951427b8a1d62a",
            "route_table_id": "rtb-0bfc56400fc4fdd3d",
            "subnet_id": "subnet-05f7be5508dc3cffd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c58129183e0db749",
            "route_table_id": "rtb-0bfc56400fc4fdd3d",
            "subnet_id": "subnet-0d368ec5bbabc924a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:subnet/subnet-09f579353fcf047b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f579353fcf047b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082897116988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-subnet-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-subnet-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:subnet/subnet-0bb0e7f6ae9506664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb0e7f6ae9506664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082897116988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-subnet-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-private-subnet-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:subnet/subnet-05f7be5508dc3cffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f7be5508dc3cffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082897116988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-subnet-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-subnet-1",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:subnet/subnet-0d368ec5bbabc924a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d368ec5bbabc924a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082897116988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-subnet-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-public-subnet-2",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:vpc/vpc-08af7e5c46b65006e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba4950a53eb8d459",
            "default_route_table_id": "rtb-0e55ec223940620ce",
            "default_security_group_id": "sg-0f6c8827645198b8e",
            "dhcp_options_id": "dopt-0aef113ef69011bed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08af7e5c46b65006e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e55ec223940620ce",
            "owner_id": "082897116988",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-vpc",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-vpc",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:security-group/sg-0c89bc394a89925c9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c89bc394a89925c9",
            "ingress": [],
            "name": "etpa-k8s-cluster-20251105063741875900000009",
            "name_prefix": "etpa-k8s-cluster-",
            "owner_id": "082897116988",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-cluster",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-cluster",
              "Owner": "devops-team",
              "Project": "ETPA-K8S"
            },
            "timeouts": null,
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082897116988:security-group/sg-00841bb7756bfa8e8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-00841bb7756bfa8e8",
            "ingress": [],
            "name": "etpa-k8s-node-2025110506374187710000000a",
            "name_prefix": "etpa-k8s-node-",
            "owner_id": "082897116988",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-node",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "owned"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "etpa-k8s-node",
              "Owner": "devops-team",
              "Project": "ETPA-K8S",
              "kubernetes.io/cluster/etpa-k8s": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08af7e5c46b65006e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3836064950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c89bc394a89925c9",
            "security_group_rule_id": "sgr-0fe896f480314c0e6",
            "self": false,
            "source_security_group_id": "sg-00841bb7756bfa8e8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2497045998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c89bc394a89925c9",
            "security_group_rule_id": "sgr-098f99a5b14ccd2d3",
            "self": false,
            "source_security_group_id": "sg-00841bb7756bfa8e8",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-3095590323",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_alb_http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "Allow ALB health checks",
            "from_port": 80,
            "id": "sgrule-1996047604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-428834775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-090c5278dcf035144",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3056830142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0b5d60bd8697b2cd3",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2138169640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-016a2d711f8ce9b32",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1814945033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0b5916e2e98b7283f",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-143453890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0c2c5dd34cfd4b359",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-2877358430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0e90d7b97d91b2cbd",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2097898714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0873ea43a2d01faf5",
            "self": false,
            "source_security_group_id": "sg-0c89bc394a89925c9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2562463541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0c14809b705f3cb39",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-2307425958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-0acb78d952809ec5c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-651293403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-03f8661a026c486c6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2190364980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00841bb7756bfa8e8",
            "security_group_rule_id": "sgr-093700db318bbc9c6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}